# public-opinion

./: .env.example  .gitignore  AGENTS.md  README.md  config.yaml  package-lock.json  package.json  pyproject.toml  vite.local.config.ts  wrangler.jsonc
.github/workflows/: ci.yml  deploy-cloudflare-containers.yml
app/: cleaning.py  cli.py  config.py  crawler.py  exporter.py  labeling.py  models.py  storage.py  training.py  utils.py  validation.py
bert/: .dockerignore  Dockerfile  README.md  app.py  export_onnx.py  requirements-container.txt  requirements.txt  train.py
bert/data/: seed.jsonl
browser-extension/: background.js  content.js  manifest.json  page-bridge.js  popup.css  popup.html  popup.js
docs/: local-runtime.md  mediacrawler-integration.md  playwright-collector.md  project-status.md
legacy/playwright-collector/: README.md
legacy/playwright-collector/app/: __init__.py  crawler.py  utils.py
legacy/playwright-collector/tests/: test_pipeline.py
scripts/: local-webui.mjs  package-bert-model.ps1  run-mediacrawler-xhs.ps1  start-local-bert.ps1  stop-local.ps1  xhs-playwright-collector.mjs
src/: App.tsx
src/shared/: types.ts
tests/: test_pipeline.py
worker/: analyze.ts  bert-container.ts  env.ts  index.ts  login.ts  sentiment.ts  session.ts  stats.test.ts  stats.ts
